# toy_networks

./: .gitignore  pyproject.toml
toy_networks/: complex_product.py  complex_product_grid.py  mlp_modular_add.py  show_complex_product.py  test.py  util.py
toy_networks/models/: __init__.py
