[project]
name = "toy-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = ["ipykernel>=6.29.5", "vandc"]

[tool.uv.sources]
vandc = { path = "../vandc", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
